--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+.detail {
+  border: solid 1px black;
+  height: 150px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+body {
+  margin: 20px 40px;
+}
